# SoftFinance-MicroServices

./: LICENSE  README.md  RNs.md  docker-compose.yml
api-auth/: Dockerfile  README.md  main.py  pyproject.toml
api-auth/api/: __init__.py
api-auth/api/controllers/: __init__.py  auth_controller.py  interceptors.py  user_controller.py
api-auth/api/domain/: __init__.py
api-auth/api/domain/models/: Token.py  User.py
api-auth/api/domain/security/: __init__.py  crypt.py  token.py
api-auth/api/domain/services/: auth_service.py  user_service.py
api-auth/api/infrastructure/connection/: __init__.py  session.py
api-auth/api/infrastructure/repositories/: __init__.py  token_repository.py  user_repository.py
api-auth/app/: main.py
api-auth/app/api/: __init__.py  auth.py
api-auth/app/api/controllers/: user_controller.py
api-auth/app/domain/models/: User.py  __init__.py
api-auth/app/domain/security/: token.py
api-auth/app/domain/services/: user_service.py
api-auth/app/infrastructure/connection/: __init__.py  session.py
api-auth/app/infrastructure/repositories/: __init__.py  user_repository.py
api-auth/migrations/: env.py
api-auth/migrations/versions/: 20af58be2ec6_creating_initial_tables.py  a1b3c3b6d4c6_column_acess_token_added.py  fcad26f2e326_creating_initial_tables.py
api-auth/tests/: conftest.py
api-customer/: main.py  pyproject.toml
api-customer/api/: __init__.py
api-customer/api/controllers/: card_controller.py
api-customer/app/: __init__.py
api-customer/app/controllers/: card_controller.py  category_controller.py
(+12 files in other folders)
